--- a/app/views/static_pages/index.html.slim
+++ b/app/views/static_pages/index.html.slim
@@ -5,4 +5,4 @@ div.container.mx-auto.my-10
   button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2"
     | tailwind
 
-  button.btn daisyUI
+  button.btn.btn-primary daisyUI
