--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,28 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
- 
+
   <body>
-    <%= yield %>
+    <div class='container mx-auto p-4 bg-base-200' data-theme="cupcake">
+      <div class='space-x-1 navbar rounded-box bg-primary text-primary-content'>
+        <div class='flex-1'>
+          <span class='text-2xl'>This is Common Navbar</span>
+        </div>
+      </div>
+      <div class='grid grid-cols-6 gap-4 mt-3'>
+        <div class='col-span-1 rounded-xl p-4 shadow-md bg-secondary'>
+          <h2 class='text-lg font-bold mb-2'>Sidebar</h2>
+          <ul class='space-y-2'>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+          </ul>
+        </div>
+        <div class='col-span-5 rounded-xl p-4 shadow-md bg-base-100'>
+          <%= yield %>
+          <div class='h-80'></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
