--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
         <div class='col-span-1 rounded-xl p-4 shadow-md bg-secondary'>
           <h2 class='text-lg font-bold mb-2'>Sidebar</h2>
           <ul class='space-y-2'>
-            <li>Link 1</li>
-            <li>Link 2</li>
+            <li><%= link_to "Link 1", '/population' %></li>
+            <li><%= link_to "Link 2", '/otoshidama' %></li>
             <li>Link 3</li>
           </ul>
         </div>
