--- a/app/views/static_pages/otoshidama.html.slim
+++ b/app/views/static_pages/otoshidama.html.slim
@@ -1,1 +1,2 @@
+= javascript_include_tag "otoshidama_entry", "data-turbo-track": "reload", type: "module"
 div id="otoshidama-root" class="flex h-[93%] flex-col"
