おとしだまグラフの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <h2 class='text-lg font-bold mb-2'>Sidebar</h2>
           <ul class='space-y-2'>
             <li><%= link_to "Link 1", '/population' %></li>
-            <li><%= link_to "Link 2", '/otoshidama' %></li>
+            <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li>Link 3</li>
           </ul>
         </div>
