将来の夢グラフのテンプレート実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
             <li><%= link_to "Link 1", '/population' %></li>
             <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li><%= link_to "５０めーとるそう", '/fifty_meter' %></li>
+            <li><%= link_to "しょうらいのゆめ", '/future' %></li>
           </ul>
         </div>
         <div class='col-span-4 rounded-xl p-4 shadow-md bg-base-100'>
