--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <div class='col-span-1 rounded-xl p-4 shadow-md bg-secondary'>
           <h2 class='text-lg font-bold mb-2'>Sidebar</h2>
           <ul class='space-y-2'>
-            <li><%= link_to "Link 1", '/population' %></li>
+            <li><%= link_to "じゅぎょうかもく", '/subject' %></li>
             <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li><%= link_to "５０めーとるそう", '/fifty_meter' %></li>
             <li><%= link_to "しょうらいのゆめ", '/future' %></li>
