--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class='container mx-auto p-4 bg-base-200' data-theme="cupcake">
       <div class='space-x-1 navbar rounded-box bg-primary text-primary-content'>
         <div class='flex-1'>
-          <span class='text-2xl'>This is Common Navbar</span>
+          <span class='text-2xl'>こどもでーた</span>
         </div>
       </div>
       <div class='grid grid-cols-5 gap-4 mt-3'>
