--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class="font-zenMaruGothic">
     <div class='container mx-auto p-4 bg-base-200' data-theme="cupcake">
       <div class='space-x-1 navbar rounded-box bg-primary text-primary-content'>
         <div class='flex-1'>
