--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,17 +18,16 @@
           <h1 class='text-4xl m-2 font-bold'>こどもでーた</span>
         </div>
       </div>
-      <div class='grid grid-cols-5 gap-4 mt-3'>
-        <div class='col-span-1 rounded-xl p-4 shadow-md bg-secondary'>
-          <h2 class='text-lg font-bold mb-2'>Sidebar</h2>
-          <ul class='space-y-2'>
+      <div class='grid grid-cols-4 gap-4 mt-3'>
+        <div class='col-span-1 rounded-xl py-4 shadow-md bg-secondary'>
+          <ul class='menu rounded-box space-y-2 text-xl font-bold'>
             <li><%= link_to "じゅぎょうかもく", '/subject' %></li>
             <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li><%= link_to "５０めーとるそう", '/fifty_meter' %></li>
             <li><%= link_to "しょうらいのゆめ", '/future' %></li>
           </ul>
         </div>
-        <div class='col-span-4 rounded-xl p-4 shadow-md bg-base-100'>
+        <div class='col-span-3 rounded-xl p-4 shadow-md bg-base-100'>
           <%= yield %>
           <div class='h-80'></div>
         </div>
