トップページの編集とサイドバーへの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       <div class='grid grid-cols-4 gap-4 mt-3'>
         <div class='col-span-1 rounded-xl py-4 shadow-md bg-secondary'>
           <ul class='menu rounded-box space-y-2 text-xl font-bold'>
+            <li><%= link_to "とっぷ", '/' %></li>
             <li><%= link_to "じゅぎょうかもく", '/subject' %></li>
             <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li><%= link_to "５０めーとるそう", '/fifty_meter' %></li>
