--- a/app/views/static_pages/index.html.slim
+++ b/app/views/static_pages/index.html.slim
@@ -1,8 +1,13 @@
+/ div.container.mx-auto.my-10
+/   h1.text-3xl.font-bold.underline
+/     | Hello world!
+
+/   button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2"
+/     | tailwind
+
+/   button.btn.btn-primary daisyUI
+
 div.container.mx-auto.my-10
-  h1.text-3xl.font-bold.underline
-    | Hello world!
-
-  button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2"
-    | tailwind
-
-  button.btn.btn-primary daisyUI
+  h1.text-3xl.font-bold.m-4 👦 こどもでーた 👧
+  p.m-4「こども」にかんするでーたをあつめて，うつくしいぐらふにまとめました。
+  p.m-4 みなさんのこどものころと，くらべてみてくださいね。
