--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         <div class='col-span-1 rounded-xl py-4 shadow-md bg-secondary'>
           <ul class='menu rounded-box space-y-2 text-xl font-bold'>
             <li><%= link_to "とっぷ", '/' %></li>
+            <li><%= link_to "うおんず", '/uonzu' %></li>
             <li><%= link_to "じゅぎょうかもく", '/subject' %></li>
             <li><%= link_to "おとしだま", '/otoshidama' %></li>
             <li><%= link_to "５０めーとるそう", '/fifty_meter' %></li>
